Revision history for Word-Rhymes

1.02 UNREL
        - Changed B<> tags to I<> tags in binary POD
        - Added Appveyor CI

1.01    2020-12-19
        - POD cleanup; Removed bolding of certain words in sub descriptions
        - Added example output sections in POD

1.00    2020-12-18
        - Fix CI and coverage badge links
        - Broke up the processing parts of fetch() and put them into a new
          _process() method
        - Added POD for private methods
        - Removed erroneous EXPORT section from POD

0.01    2020-12-18
        First version, released on an unsuspecting world.
