@@ -3,7 +3,8 @@ Revision history for Word-Rhymes
 1.02 UNREL
         - Changed B<> tags to I<> tags in binary POD
         - Added Appveyor CI
-
+        - Modified typo in file test (/lib -> lib/) as the test succeeded in
+          Linux (because /lib is valid), but failed on Windows.
 1.01    2020-12-19
         - POD cleanup; Removed bolding of certain words in sub descriptions
         - Added example output sections in POD
